--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <error-page>
+        <error-code>700</error-code>
+        <location>/IOExeption.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>701</error-code>
+        <location>/SQLExeption.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>800</error-code>
+        <location>/exeption.jsp</location>
+    </error-page>
 </web-app>
